@@ -90,6 +90,7 @@ extern "C" {
 #define HWLOC_OBJ_OSDEV_OPENFABRICS HWLOC_NAME_CAPS(OBJ_OSDEV_OPENFABRICS)
 #define HWLOC_OBJ_OSDEV_DMA HWLOC_NAME_CAPS(OBJ_OSDEV_DMA)
 #define HWLOC_OBJ_OSDEV_COPROC HWLOC_NAME_CAPS(OBJ_OSDEV_COPROC)
+#define HWLOC_OBJ_OSDEV_MEMORY HWLOC_NAME_CAPS(OBJ_OSDEV_MEMORY)
 
 #define hwloc_compare_types HWLOC_NAME(compare_types)
 
