@@ -169,7 +169,7 @@
         </object>
         <object type="PCIDev" pci_busid="0000:00:1f.3" pci_type="0c05 [8086:1d22] [1028:0518] 06 00" pci_link_speed="0.000000"/>
       </object>
-      <object type="OSDev" name="dax0.0" subtype="NVM" osdev_type="0">
+      <object type="OSDev" name="dax0.0" subtype="NVM" osdev_type="6">
         <info name="DAXType" value="NVM"/>
         <info name="DAXParent" value="LNXSYSTM:00/LNXSYBUS:00/ACPI0012:00/ndbus0/region0"/>
         <info name="Size" value="105281536"/>
@@ -323,7 +323,7 @@
         <object type="PCIDev" pci_busid="0000:80:05.2" pci_type="0880 [8086:3c2a] [1028:0518] 07 00" pci_link_speed="0.000000"/>
         <object type="PCIDev" pci_busid="0000:80:05.4" pci_type="0800 [8086:3c2c] [1028:0518] 07 20" pci_link_speed="0.000000"/>
       </object>
-      <object type="OSDev" name="dax1.3" subtype="NVM" osdev_type="0">
+      <object type="OSDev" name="dax1.3" subtype="NVM" osdev_type="6">
         <info name="DAXType" value="NVM"/>
         <info name="DAXParent" value="LNXSYSTM:00/LNXSYBUS:00/ACPI0012:00/ndbus0/region1/dax1.0"/>
         <info name="Size" value="61929472"/>
