@@ -30,7 +30,8 @@ Version 3.0.0
   + PCI domains are now always 32bits.
   + The "programming interface" of PCI devices is now exposed
     in PCI object attributes.
-  + "Block" OS devices are now "Storage".
+  + "Block" OS devices are now "Storage" (for actual Block devices)
+    or "Memory" (for Linux DAX and CXL devices, etc).
 * Tools
   + lstopo has a new --osf option to tune the displaying of object
     attributes and units.
